🔨 : post 로직 수정